Fix styling to allow aligning of elements

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -24,15 +24,15 @@ body {
 
         &.text {
             color: #3f5043;
+        }
 
-            &.align-left {
-            }
-            &.align-right {
-                transform: translateX(-100%);
-            }
-            &.align-center {
-                transform: translateX(-50%);
-            }
+        &.align-left {
+        }
+        &.align-right {
+            transform: translateX(-100%);
+        }
+        &.align-center {
+            transform: translateX(-50%);
         }
     }
 
@@ -92,6 +92,8 @@ body {
 
         .floorplan-outer-container {
             position: absolute;
+
+            background-color: grey;
 
             top: 28%;
             right: 0px;
